Code cleanup and reorganization

--- a/bbc/apps/accounts/templates/login.html
+++ b/bbc/apps/accounts/templates/login.html
@@ -21,9 +21,17 @@
 	  
      <div class="row text-center">
         <div class="col-lg-12">
-           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'myoauth' %}">Login with {{PROPRIETARY_BACKEND_NAME}}.oauth2.io</a>
+           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'myokta' %}">Login with My Okta</a>
 		</div>
 	  </div>
+	
+     <div class="row text-center">
+        <div class="col-lg-12">
+           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'instagram' %}">Login with Instagram</a>
+		</div>
+	  </div>
+	
+	
 	
 </div>
 	
