--- a/bbc/templates/include/footer.html
+++ b/bbc/templates/include/footer.html
@@ -5,7 +5,7 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p><a href="http://videntity.com" target="_blank">Videntity</a> </p>
+            <p>A CMS Blue Button API Client Example - In development. </p>
           </div>
         </div>
       </footer>
