--- a/bbc/templates/include/top-nav.html
+++ b/bbc/templates/include/top-nav.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">OAuth2 Client Example</a>
+          <a class="navbar-brand" href="/">BBC</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -27,12 +27,7 @@
               </ul>
             </li>
              {% else %}
-             <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">Account <b class="caret"></b></a>
-              <ul class="dropdown-menu">
-                <li><a href="{% url 'social:begin' 'myoauth' %}">Login with Your CMS Credentials</a></li>
-              </ul>
-            </li>
+
 
 
               {% endif %}
