--- a/bbc/apps/accounts/templates/login.html
+++ b/bbc/apps/accounts/templates/login.html
@@ -21,18 +21,11 @@
 	  
      <div class="row text-center">
         <div class="col-lg-12">
-           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'myokta' %}">Login with My Okta</a>
+           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'myoauth' %}">Login with OAuth2.io</a>
 		</div>
 	  </div>
-	
-     <div class="row text-center">
-        <div class="col-lg-12">
-           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'instagram' %}">Login with Instagram</a>
-		</div>
-	  </div>
-	
-	
-	
+
+		
 </div>
 	
 {% endblock %}
