--- a/bbc/apps/accounts/templates/login.html
+++ b/bbc/apps/accounts/templates/login.html
@@ -21,7 +21,7 @@
 	  
      <div class="row text-center">
         <div class="col-lg-12">
-           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'myoauth' %}">Login with OAuth2.io</a>
+           <a class="btn btn-primary btn-large" href="{% url 'social:begin' 'oauth2io' %}">Login with OAuth2.io</a>
 		</div>
 	  </div>
 
