--- a/bbc/apps/home/templates/authenticated-home.html
+++ b/bbc/apps/home/templates/authenticated-home.html
@@ -31,16 +31,16 @@
         <div class="col-lg-12">
 
 
-			<a href="/patient/cms/pull/me"><button type="button" class="btn btn-primary">Get My Personal Health Data</button> </a>
-		  <a href="/patient/djmongo-read"><button type="button" class="btn btn-primary">Djmongo Test Read</button> </a>
-		<a href="/patient/djmongo-write"><button type="button" class="btn btn-primary">Djmongo Test Write</button> </a>
-		   <a href="/provider/fetch-practitioner"><button type="button" class="btn btn-primary">Fetch Practitioner for Update</button> </a>
-		     <a href="/provider/fhir/practitioner/update"><button type="button" class="btn btn-primary">Update Practitioner FHIR</button> </a>
-         <a href="/provider/fhir/practitioner/push"><button type="button" class="btn btn-primary">Create New Practitioner FHIR</button> </a>
-         <a href="/provider/fhir/organization/update"><button type="button" class="btn btn-primary">Update Organization FHIR</button> </a>
-         <a href="/provider/fhir/organization/push"><button type="button" class="btn btn-primary">Create New Organization FHIR</button> </a>
-		     <a href="/provider/pjson/push"><button type="button" class="btn btn-primary">Push Provider JSON</button> </a>
-
+			<a href="/patient/cms/pull/me"><button type="button" class="btn btn-primary">https://dev.bluebutton.cms.fhirservice.net/bluebutton/fhir/v1/ExplanationOfBenefit/?patient={{request.user.username}}</button> </a>
+		  
+		      <!--<a href="/patient/djmongo-read"><button type="button" class="btn btn-primary">Djmongo Test Read</button> </a>-->
+		      <!--<a href="/patient/djmongo-write"><button type="button" class="btn btn-primary">Djmongo Test Write</button> </a>-->
+		      <!--<a href="/provider/fetch-practitioner"><button type="button" class="btn btn-primary">Fetch Practitioner for Update</button> </a>-->
+		      <!--<a href="/provider/fhir/practitioner/update"><button type="button" class="btn btn-primary">Update Practitioner FHIR</button> </a>-->
+              <!--<a href="/provider/fhir/practitioner/push"><button type="button" class="btn btn-primary">Create New Practitioner FHIR</button> </a>-->
+              <!--<a href="/provider/fhir/organization/update"><button type="button" class="btn btn-primary">Update Organization FHIR</button> </a>-->
+              <!--<a href="/provider/fhir/organization/push"><button type="button" class="btn btn-primary">Create New Organization FHIR</button> </a>-->
+		      <!--<a href="/provider/pjson/push"><button type="button" class="btn btn-primary">Push Provider JSON</button> </a>-->
 			<!--<a href="{% url "call_read" %}"><button type="button" class="btn btn-primary">Call Read</button> </a>-->
 
 			<!--
