Update header and footer

--- a/bbc/templates/include/head.html
+++ b/bbc/templates/include/head.html
@@ -2,8 +2,10 @@
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="OAuth2 Client Example"/>
+<meta name="description" content="Blue Button API Client Example - OAuth2 an FHIR"/>
 <meta name="author" content="Alan Viars">
+<meta name="copyright" content="Videntity Systems, Inc."/>
+
 <link href="{% static "img/favicon.png" %}" rel="shortcut icon" type="image/x-icon" />
 
 <!-- Custom Fonts -->
