--- a/bbc/templates/include/footer.html
+++ b/bbc/templates/include/footer.html
@@ -5,7 +5,9 @@
       <footer>
         <div class="row">
           <div class="col-lg-12">
-            <p>A CMS Blue Button API Client Example - In development. </p>
+            <div class="row text-center h4" >
+            <p>A Blue Button API Client Example using OAuth2 and FHIR - <a href="https://github.com/HHSIDEAlab/django_bluebutton_client">Fork me on GitHub </p>
+            </div>
           </div>
         </div>
       </footer>
