--- a/bbc/templates/include/top-nav.html
+++ b/bbc/templates/include/top-nav.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">BBC</a>
+          <a class="navbar-brand" href="/">Blue Button API Client Example</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
@@ -16,14 +16,10 @@
           <ul class="nav navbar-nav navbar-right">
 
             {% if user.is_authenticated %}
-
-
              <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user }} <b class="caret"></b></a>
               <ul class="dropdown-menu">
-                <li><a href="/accounts/settings">Account Settings</a></li>
                 <li><a href="/accounts/logout">Logout</a></li>
-
               </ul>
             </li>
              {% else %}
