--- a/bbc/apps/home/templates/authenticated-home.html
+++ b/bbc/apps/home/templates/authenticated-home.html
@@ -30,26 +30,35 @@
     <div class="row">
         <div class="col-lg-12">
 
-
-			<a href="/patient/cms/pull/me"><button type="button" class="btn btn-primary">https://dev.bluebutton.cms.fhirservice.net/bluebutton/fhir/v1/ExplanationOfBenefit/?patient={{request.user.username}}</button> </a>
+Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-help/">Developer Documentation</a> or
+<a href="http://go.cms.gov/bluebutton">General Blue Button Information</a>
+        </div>
+      </div>
+	
+	    <div class="row">
+        <div class="col-lg-12">
+			<h1>Explanation of Benefit</h1>
+<a href="{%url 'bbof_get_eob' %}"><button type="button" class="btn btn-primary">{{settings.OAUTH2IO_HOST}}/protected/bluebutton/fhir/v1/ExplanationOfBenefit/?patient={{request.user.username}}&_format=json</button> </a>
+		   
+        </div>
+      </div>
+		
+			    <div class="row">
+        <div class="col-lg-12">
+			<h1>Patient</h1>
+<a href="{%url 'bbof_get_patient' %}"><button type="button" class="btn btn-primary">{{settings.OAUTH2IO_HOST}}/protected/bluebutton/fhir/v1/Patient/{{request.user.username}}?_format=json</button> </a>
 		  
-		      <!--<a href="/patient/djmongo-read"><button type="button" class="btn btn-primary">Djmongo Test Read</button> </a>-->
-		      <!--<a href="/patient/djmongo-write"><button type="button" class="btn btn-primary">Djmongo Test Write</button> </a>-->
-		      <!--<a href="/provider/fetch-practitioner"><button type="button" class="btn btn-primary">Fetch Practitioner for Update</button> </a>-->
-		      <!--<a href="/provider/fhir/practitioner/update"><button type="button" class="btn btn-primary">Update Practitioner FHIR</button> </a>-->
-              <!--<a href="/provider/fhir/practitioner/push"><button type="button" class="btn btn-primary">Create New Practitioner FHIR</button> </a>-->
-              <!--<a href="/provider/fhir/organization/update"><button type="button" class="btn btn-primary">Update Organization FHIR</button> </a>-->
-              <!--<a href="/provider/fhir/organization/push"><button type="button" class="btn btn-primary">Create New Organization FHIR</button> </a>-->
-		      <!--<a href="/provider/pjson/push"><button type="button" class="btn btn-primary">Push Provider JSON</button> </a>-->
-			<!--<a href="{% url "call_read" %}"><button type="button" class="btn btn-primary">Call Read</button> </a>-->
 
-			<!--
-            <form method="post" action="{% url "call_write" %}">
-                {% csrf_token %}
-                {{ form|bootstrap }}
-                <button type="submit" class="btn btn-primary">Call Write</button>
-            </form>
-			-->
+        </div>
+      </div>
+	    <div class="row">
+        <div class="col-lg-12">
+			<h1>Coverage</h1>
+<a href="{%url 'bbof_get_eob' %}"><button type="button" class="btn btn-primary">{{settings.OAUTH2IO_HOST}}/bluebutton/fhir/v1/Coverage/?patient={{request.user.username}}&_format=json</button> </a>
+
+        </div>
+      </div>
+			
 		 </div>
 	   </div>
  <!--
