Parameterize app title

--- a/bbc/templates/include/top-nav.html
+++ b/bbc/templates/include/top-nav.html
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Blue Button API Client Example</a>
+          <a class="navbar-brand" href="/">{{settings.APP_TITLE}}</a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
