--- a/bbc/apps/patient/templates/bbof.html
+++ b/bbc/apps/patient/templates/bbof.html
@@ -20,12 +20,12 @@
     </div>
 
 
-    <div class="row text-center">
+    <div class="row text-left">
         <div class="col-lg-12">
 
             <pre>
-            {{remote_content}}
-               </pre>   
+{{remote_content}}
+            </pre>
                 
                 
                 
