--- a/bbc/apps/home/templates/authenticated-home.html
+++ b/bbc/apps/home/templates/authenticated-home.html
@@ -54,7 +54,7 @@ Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-h
 	    <div class="row">
         <div class="col-lg-12">
 			<h1>Coverage</h1>
-<a href="{%url 'bbof_get_eob' %}"><button type="button" class="btn btn-primary">{{settings.OAUTH2IO_HOST}}/bluebutton/fhir/v1/Coverage/?patient={{request.user.username}}&_format=json</button> </a>
+<a href="{%url 'bbof_get_coverage' %}"><button type="button" class="btn btn-primary">{{settings.OAUTH2IO_HOST}}/bluebutton/fhir/v1/Coverage/?patient={{request.user.username}}&_format=json</button> </a>
 
         </div>
       </div>
