--- a/bbc/apps/home/templates/authenticated-home.html
+++ b/bbc/apps/home/templates/authenticated-home.html
@@ -34,27 +34,55 @@ Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-h
 <a href="http://go.cms.gov/bluebutton">General Blue Button Information</a>
         </div>
       </div>
+    	  <div class="row">
+        <div class="col-lg-12">
+			<h1>Patient</h1>
+<a href="{%url 'bbof_get_patient' %}"><button type="button" class="btn btn-primary">Get my Patient Record   </button> </a>
+		  <div class="col-lg-4-well">
+            <div class="alert alert-info">
+
+              <p>{{settings.OAUTH2IO_HOST}}<br/>
+                  /protected/bluebutton/fhir/v1/<br/>
+                  <b>Patient/{{request.user.username}}</b><br>
+                  <i>?_format=json</i></p>
+            </div>
+           </div>
+
+        </div>
+      </div>
+
 	
 	    <div class="row">
         <div class="col-lg-12">
 			<h1>Explanation of Benefit</h1>
-<a href="{%url 'bbof_get_eob' %}"><button type="button" class="btn btn-primary">{{settings.OAUTH2IO_HOST}}/protected/bluebutton/fhir/v1/ExplanationOfBenefit/?patient={{request.user.username}}&_format=json</button> </a>
-		   
+<a href="{%url 'bbof_get_eob' %}"><button type="button" class="btn btn-primary">Get my Claims    </button> </a>
+		   <div class="col-lg-4-well">
+            <div class="alert alert-info">
+
+              <p>{{settings.OAUTH2IO_HOST}}<br/>
+                  /protected/bluebutton/fhir/v1/<br/>
+                  <b>ExplanationOfBenefit/</b><br/>
+                  <i>?patient={{request.user.username}}&_format=json</i></p>
+            </div>
+           </div>
         </div>
       </div>
 		
-			    <div class="row">
-        <div class="col-lg-12">
-			<h1>Patient</h1>
-<a href="{%url 'bbof_get_patient' %}"><button type="button" class="btn btn-primary">{{settings.OAUTH2IO_HOST}}/protected/bluebutton/fhir/v1/Patient/{{request.user.username}}?_format=json</button> </a>
-		  
-
-        </div>
-      </div>
 	    <div class="row">
         <div class="col-lg-12">
 			<h1>Coverage</h1>
-<a href="{%url 'bbof_get_coverage' %}"><button type="button" class="btn btn-primary">{{settings.OAUTH2IO_HOST}}/bluebutton/fhir/v1/Coverage/?patient={{request.user.username}}&_format=json</button> </a>
+<a href="{%url 'bbof_get_coverage' %}"><button type="button" class="btn btn-primary">Get My Insurance Coverage   </button> </a>
+
+          <div class="col-lg-4-well">
+            <div class="alert alert-info">
+
+              <p>{{settings.OAUTH2IO_HOST}}<br/>
+                  /protected/bluebutton/fhir/v1/<br/>
+                  <b>Coverage/</b><br>
+                  <i>?patient={{request.user.username}}&_format=json</i></p>
+            </div>
+           </div>
+
 
         </div>
       </div>
