--- a/bbc/apps/patient/templates/bbof.html
+++ b/bbc/apps/patient/templates/bbof.html
@@ -7,14 +7,16 @@
     <div class="row">
         <div class="col-lg-12">
 	      <ol class="breadcrumb">
-	        <li class="active"><a href="/">Blue Button on FHIR</a></li>
+
+	        <li class="active"><a href="/">{% if name %}{{ name }}{% else %}Blue Button on FHIR{% endif %}</a>
+            {% if resourceType %}:{{ resourceType}}{% endif %}&nbsp;
+            </li>
 
 
     {% if same_page %}
 
-        <li>
-            <a href="{{ same_page_url }}"><i class="fa fa-refresh" aria-hidden="true"></i> Reload This Page</a>
-        </li>
+
+            <a href="{{ same_page_url }}" class="ds-c-button ds-c-button--disabled"><i class="fa fa-refresh" aria-hidden="true"></i> Reload This Page</a>
 
     {% endif %}
     {% if prev_page %}
@@ -22,7 +24,10 @@
         <li>
             <a href="{{ prev_page_url }}"><i class="fa fa-step-backward" aria-hidden="true"></i> Previous Page</a>
         </li>
-
+    {% else %}
+        <li>
+            &nbsp;
+        </li>
     {% endif %}
     {% if next_page %}
 
