Display Bundle / Resource Type as title

--- a/bbc/apps/patient/templates/bbof.html
+++ b/bbc/apps/patient/templates/bbof.html
@@ -6,10 +6,11 @@
 
     <div class="row">
         <div class="col-lg-12">
+            <h1 class="ds-title">{% if resourceType %}{{ resourceType}}{% endif %}</h1>
 	      <ol class="breadcrumb">
 
 	        <li class="active"><a href="/">{% if name %}{{ name }}{% else %}Blue Button on FHIR{% endif %}</a>
-            {% if resourceType %}:{{ resourceType}}{% endif %}&nbsp;
+            &nbsp;
             </li>
 
 
