--- a/bbc/apps/home/templates/authenticated-home.html
+++ b/bbc/apps/home/templates/authenticated-home.html
@@ -7,7 +7,7 @@
 
     <div class="row">
       <div class="col-lg-12">
-         <h1 class="page-header">Hello {{user|capfirst}}</h1>
+         <h1 class="page-header">Hello {% if patient_id %}{{ patient_id }}{% else %}{{ user }}{% endif %}</h1>
       </div>
     </div>
 
