Added Custom Coverage definition Added custom viewer form

--- a/bbc/apps/home/templates/authenticated-home.html
+++ b/bbc/apps/home/templates/authenticated-home.html
@@ -47,8 +47,8 @@ Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-h
                <a href="/probie/geturlwithauth?url={{ 'https://sandbox.bluebutton.cms.gov/v1/fhir/Patient/20000000002322'|urlencode:'' }}"><button type="button" class="btn btn-primary">
                    FHIR Probie - Get with auth</button> </a>
 
-               <a href="/probie/customview?view=Patient&url={{ 'https://sandbox.bluebutton.cms.gov/v1/fhir/Patient/20000000002322'|urlencode:'' }}"><button type="button" class="btn btn-primary">
-                   FHIR Probie - Custom View:Patient</button> </a>
+               <a href="/probie/getcustomview"><button type="button" class="btn btn-primary">
+                   FHIR Probie - Custom View</button> </a>
 
             </div>
     
