Fixed display of int values Added javascript comments to include files for easier debugging

--- a/bbc/apps/probie/templates/display_list.html
+++ b/bbc/apps/probie/templates/display_list.html
@@ -1,1 +1,3 @@
+<!-- templates/display_list.html:start -->
  <p><span class="h6">{{ card_item.name }}</span></p>
+<!-- templates/display_list.html:end -->
