--- a/bbc/apps/probie/templates/display_sub_dict_list.html
+++ b/bbc/apps/probie/templates/display_sub_dict_list.html
@@ -1,3 +1,4 @@
+<!-- templates/display_sub_dict_list.html:start -->
 <div id="collapse{{ card_item.pathSeq }}" class="collapse" aria-labelledby="heading{{ card_item.pathSeq }}" data-parent="#accordion">
   <div class="card-body">
       {% with drill_level=display_level %}
@@ -9,3 +10,4 @@
       {% endwith %}
   </div>
 </div>
+<!-- templates/display_sub_dict_list.html:end -->
