--- a/bbc/apps/probie/templates/display_dict.html
+++ b/bbc/apps/probie/templates/display_dict.html
@@ -1,1 +1,3 @@
+<!-- templates/display_dict.html:start -->
  <p><span class="h6">{{ card_item.name }}</span></p>
+<!-- templates/display_dict.html:end -->
