First version of objectPath viewer.

--- a/bbc/apps/probie/templates/bundle_f.html
+++ b/bbc/apps/probie/templates/bundle_f.html
@@ -3,6 +3,10 @@
 {% load startswith %}
 {% load is_int %}
 {% block extra_head %}
+<script>
+$('#example').tooltip(options)
+</script>
+
 {% endblock %}
 {% block Content %}
 
@@ -13,8 +17,7 @@
 	      <ol class="breadcrumb">
 	        <li class="active"><a href="/probie/">{{ name }}</a></li>
               &nbsp;|&nbsp;
-            <li class="active">
-                <a href="/probie/customview?view=Patient&url={{ target_url|urlencode:'' }}">Custom Viewer:{{ view }}</a></li>
+            <li class="active"><a href="/probie/getbyurl">Get By URL</a></li>
           </ol>
         </div>
      </div>
@@ -23,7 +26,7 @@
        <div class="card col-lg-12">
         <p><span class="h6">Target URI
             </span>:
-                <a href="/probie/customview?view=Patient&url={{ target_url|urlencode:'' }}" target="_blank">
+                <a href="/probie/geturlwithauth?url={{ target_url|urlencode:'' }}" target="_blank">
                     {{ target_url }}</a></p>
        </div>
     </div>
@@ -37,9 +40,20 @@
 
     <div class="container-fluid">
         {% if fe_dict %}
+            {% if bundle %}
+                <h3>{{ bundle.resourceType}} of {{ bundle.entryCount }} (of Total:{{ bundle.total }}) {{ bundle.entryType }} records</h3>
 
-            <h3>Record Summary: {{ fe_dict_source.entry.0.resource.resourceType }}</h3>
-            {% include "probie_custom.html" with card_dict=fe_dict %}
+                {% if bundle.link %}
+                    {% include "bundle_link.html" with link_uris=bundle.link %}
+                {% endif %}
+
+                <h3>{{ bundle.entryType }} records</h3>
+
+            {% else %}
+                <h3>Record Summary: {{ fe_dict.0.value }} of {{ fe_dict.5.value }} {{ fe_dict.7.entry.0.resource.resourceType }} records</h3>
+            {% endif %}
+
+            {% include "bundle_card.html" with card_dict=entry display_level=1 parent_path="entry" %}
 
         {% endif %}
     </div>
