--- a/bbc/apps/probie/templates/display_list.html
+++ b/bbc/apps/probie/templates/display_list.html
@@ -1,3 +1,3 @@
 <!-- templates/display_list.html:start -->
- <p><span class="h6">{{ card_item.name }}</span></p>
+ <span class="h6" data-toggle="tooltip" title="{{ card_item.pathName }}"> {{ card_item.name }}</span>
 <!-- templates/display_list.html:end -->
