--- a/bbc/apps/probie/templates/engine_f.html
+++ b/bbc/apps/probie/templates/engine_f.html
@@ -43,26 +43,9 @@
         {% endif %}
     </div>
     <div class="card">
-    <div class="card-header" id="headingOne">
-      <h5 class="mb-0">
-        <button class="btn btn-link" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-            <h3>Show me all of the json...</h3>
-        </button>
-      </h5>
-    </div>
 
-    <div id="collapseOne" class="collapse" aria-labelledby="headingOne" data-parent="#accordion">
-      <div class="card-body">
-    <div class="row text-left">
-        <div class="col-lg-12">
-            <pre>
-{{ remote_content }}
-            </pre>
-	    </div>
+        {% include "display_all_json.html" %}
 
-      </div>
-    </div>
-  </div>
 
   </div>
 
