--- a/bbc/apps/probie/templates/probie_card.html
+++ b/bbc/apps/probie/templates/probie_card.html
@@ -7,13 +7,12 @@
   <div class="card">
     <div class="card-header col-sm-12" id="heading{{ card_item.pathSeq }}">
 
-        {% if card_item.type == 'str' or card_item.type == 'int' %}
+        {% if card_item.type == 'str' or card_item.type == 'int' or card_item.type == 'float' %}
 
             {% include "display_string.html" %}
 
          {% else %}
            <button class="btn btn-link" data-toggle="collapse" data-target="#collapse{{ card_item.pathSeq }}" aria-expanded="true" aria-controls="collapse{{ card_item.pathSeq }}">
-
                {% if card_item.type == 'list' %}
                    {% include "display_list.html" %}
                {% else %}
@@ -24,7 +23,6 @@
 
     </div>
     {% if card_item.type == 'dict' or card_item.type == 'list' %}
-
        {% include "display_sub_dict_list.html" %}
 
      {% endif %}
