Get an entire bundle. Display fields based on jpath request Display pathName from probie to enable new field requests to be built.

--- a/bbc/apps/home/templates/authenticated-home.html
+++ b/bbc/apps/home/templates/authenticated-home.html
@@ -50,6 +50,9 @@ Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-h
                <a href="/probie/getcustomview"><button type="button" class="btn btn-primary">
                    FHIR Probie - Custom View</button> </a>
 
+               <a href="/probie/fieldview"><button type="button" class="btn btn-primary">
+                   FHIR Probie - Field View</button> </a>
+
             </div>
     
     </div>
