Update references to documentation and sandbox.

--- a/bbc/apps/home/templates/public-home.html
+++ b/bbc/apps/home/templates/public-home.html
@@ -23,7 +23,7 @@
         <div class="col-lg-12">
 
            This is a sample Blue Button Client. Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-help/">Developer Documentation</a> and the
-<a href="https://dev.bluebutton.cms.fhirservice.net/devdocs/?baseUrl=https://dev.bluebutton.cms.fhirservice.net/devdocs_bbonfhirapi/bbonfhirapi_swagger.yaml">Swagger documentation</a> for information.
+<a href="https://dev.bluebutton.cms.fhirservice.net/devdocs/?baseUrl=https://sandbox.bluebutton.cms.gov/devdocs_bbonfhirapi/bbonfhirapi_swagger.yaml">Swagger documentation</a> for information.
         </div>
       </div>
 		
