--- a/bbc/apps/home/templates/authenticated-home.html
+++ b/bbc/apps/home/templates/authenticated-home.html
@@ -30,7 +30,7 @@
     <div class="row">
         <div class="col-lg-12">
 
-Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-help/">Developer Documentation</a> or
+Please refer to the <a href="https://bluebutton.cms.gov/developers/">Developer Documentation</a> or
 <a href="http://go.cms.gov/bluebutton">General Blue Button Information</a>
         </div>
       </div>
@@ -46,10 +46,7 @@ Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-h
 			    <div class="row">
         <div class="col-lg-12">
 			<h1>Patient</h1>
-<<<<<<< HEAD
-=======
 
->>>>>>> 535784fa8d78fd14dd8bb4c8a1e6eb815402bfba
 <a href="{%url 'bbof_get_patient' %}"><button type="button" class="btn btn-primary">{{settings.FHIR_HOST}}/Patient/{{request.user.username}}?_format=json</button> </a>
 		  
 
@@ -58,13 +55,8 @@ Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-h
 	    <div class="row">
         <div class="col-lg-12">
 			<h1>Coverage</h1>
-<<<<<<< HEAD
-<a href="{%url 'bbof_get_coverage' %}"><button type="button" class="btn btn-primary">{{settings.FHIR_HOST}}/Coverage/?patient={{request.user.username}}&_format=json</button> </a>
-=======
 
 <a href="{%url 'bbof_get_coverage' %}"><button type="button" class="btn btn-primary">{{settings.FHIR_HOST}}/Coverage/?patient={{request.user.username}}&_format=json</button> </a>
-
->>>>>>> 535784fa8d78fd14dd8bb4c8a1e6eb815402bfba
 
         </div>
       </div>
