--- a/bbc/apps/home/templates/public-home.html
+++ b/bbc/apps/home/templates/public-home.html
@@ -22,8 +22,10 @@
     <div class="row">
         <div class="col-lg-12">
 
-           This is a sample Blue Button Client. Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-help/">Developer Documentation</a> and the
-<a href="https://dev.bluebutton.cms.fhirservice.net/devdocs/?baseUrl=https://dev.bluebutton.cms.fhirservice.net/devdocs_bbonfhirapi/bbonfhirapi_swagger.yaml">Swagger documentation</a> for information.
+           This is a sample Blue Button Client.
+           Please refer to the <a href="https://bluebutton.cms.gov/developers/">Developer Documentation</a> or
+<a href="http://go.cms.gov/bluebutton">General Blue Button Information</a>
+
         </div>
       </div>
 		
