Remove bbof_get_fhir and add metadata

--- a/bbc/apps/home/templates/authenticated-home.html
+++ b/bbc/apps/home/templates/authenticated-home.html
@@ -58,6 +58,13 @@ Please refer to the <a href="https://hhsidealab.github.io/bluebutton-developer-h
 
         </div>
       </div>
+	    <div class="row">
+        <div class="col-lg-12">
+			<h1>FHIR Metadata</h1>
+<a href="{{settings.FHIR_HOST}}/metadata"><button type="button" class="btn btn-primary">{{settings.FHIR_HOST}}/metadata/&_format=json</button> </a>
+
+        </div>
+      </div>
 			
 		 </div>
 	   </div>
