--- a/bbc/templates/include/top-nav.html
+++ b/bbc/templates/include/top-nav.html
@@ -17,7 +17,7 @@
 
             {% if user.is_authenticated %}
              <li class="dropdown">
-              <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user }} <b class="caret"></b></a>
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown">{{ user.first_name }} {{ user.last_name }} {{ user }}<b class="caret"></b></a>
               <ul class="dropdown-menu">
                 <li><a href="/accounts/logout">Logout</a></li>
               </ul>
